<resources>
    <string name="app_name">Desafio CRUD Games</string>
    <string name="splash_screen_image_logo">Logotipo da imagem da tela inicial</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Olá fragmento em branco</string>
    <string name="add_game_description">Crie uma nova lista de jogos</string>
    <string name="name">Nome</string>
    <string name="producer">Produtor</string>
    <string name="platform">Plataforma</string>
    <string name="notes">Descrição(Opcional)</string>
    <string name="last_update">Última atualização</string>
    <string name="photo_of_game">Foto do jogo</string>
    <string name="size_of_games_list">Tamanho da lista de jogos:</string>
    <string name="simple_description">Descrição simples</string>
    <string name="delete_game">Apagar o Jogo</string>
</resources>